Scroll helper, user show page z-index carousel bug, initial commit of upload project

--- a/frontend/src/app.scss
+++ b/frontend/src/app.scss
@@ -132,9 +132,25 @@ h6 {
 }
 
 .user-details {
+  position: relative;
   padding: 0 40px;
   display: flex;
   justify-content: space-around;
+}
+
+.user-details:after {
+  content: '';
+  position: absolute;
+  width: 347px;
+  top: 70px;
+  right: 50px;
+  opacity: 0.8;
+  bottom: -100px;
+  transform: rotate(25deg);
+  // left: 60%;
+  background-image: url('https://res.cloudinary.com/willwang/image/upload/v1609394318/leave3_dzfi85.png');
+  background-repeat: no-repeat;
+  background-size: contain;
 }
 
 .work-info,
@@ -142,6 +158,7 @@ h6 {
 .extra-info {
   display: flex;
   flex-flow: column nowrap;
+  z-index: 3;
 }
 
 .info-title {
@@ -157,6 +174,14 @@ h6 {
   display: flex;
   flex-flow: column nowrap;
   margin-bottom: 20px;
+}
+
+.job:not(:last-child):after {
+  content: '';
+  background-color: rgba(107, 39, 39, 0.1);
+  margin-top: 10px;
+  height: 3px;
+  width: 100%;
 }
 
 .job > *,
@@ -250,7 +275,6 @@ $level0-bs: 0 0.4em 0.8em rgba(0, 0, 0, 0.2);
   justify-content: center;
   padding: 20px;
   height: 100%;
-  z-index: 1000;
   color: rgba(0, 0, 0, 0.25);
   transition: all 500ms;
   &-right {
